# Science

./: CHANGELOG.md  CHANGELOG.txt  LICENCE.txt  MANIFEST.in  README.md  README.txt  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.py
.github/: FUNDING.yml
.github/workflows/: python-package.yml
Source/: __init__.py  actinide.py  alkaliMetal.py  alkalineEarthMetal.py  lanthanide.py  metalloid.py  nobleGas.py  postTransitionMetal.py  reactiveNonmetal.py  temperature.py  test_temperature.py  transitionMetal.py  unknownChemicalProperties.py
Source/Base/: atomsBase.py
Source/Errors/: TemperatureError.py
atom/: __init__.py  abc23.py  actinide.py  alkali_metal.py  alkaline_earth_metal.py  atom.py  atoms_base.py  lanthanide.py  metalloid.py  noble_gas.py  post_transition_metal.py  reactive_nonmetal.py  transition_metal.py  unknown_chemical_properties.py
core/: __init__.py  storecore.py
core/atom/: __init__.py  abc23.py  actinide.py  alkali_metal.py  alkaline_earth_metal.py  atomic_error.py  atoms_base.py  lanthanide.py  metalloid.py  noble_gas.py  post_transition_metal.py  reactive_nonmetal.py  transition_metal.py  unknown_chemical_properties.py
core/atom/atomBase/: __init__.py  atoms_base.py
core/atom/calculation/: catoms.c
core/atom/errors/: ECUam.py  __init__.py
core/bases/: __init__.py  constants.py
core/thermodynamics/: __init__.py  decorators.py  temperature.py  temperature_error.py  test_temperature.py  tester.py
core/thermodynamics/calculation/: ctemperature.c
core/thermodynamics/errors/: ECUtm.py  __init__.py
src/core/atom/: abc23.py  actinide.py  (+2 more)
testing/: __init__.py  fautures_tests.py  test_temperature.py  tests.py
thermodynamics/: __init__.py  temperature.py  test_temperature.py
(+5 files in other folders)
