[metadata]
name = science
version = 0.0.1 
description = Use the properties of thermomechanics and set up simple chemical reactions
long_description = file: README.md# الملف المذكور لم ينتهي بعد ...
long_description_content_type = text/markdown
url = https://github.com/MASTAR-LAST/Science
author = Mohammed Al_kohawaldeh
author_email = belalalkohawaldeh@gmail.com
license = MIT 
classifiers =
     Development Status :: 5 - Production/non-stable
     Intended Audience :: Education
     Operating System :: OS Independent
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.9
include_package_data = True