[metadata]
name = science
version = 0.1.0 
description = Use the properties of thermomechanics and set up simple chemical reactions
long_description = file: README.md# الملف المذكور لم ينتهي بعد ...
long_description_content_type = text/markdown
url = https://github.com/MASTAR-LAST/Science
author = Mohammed Al_kohawaldeh
author_email = belalalkohawaldeh@gmail.com
license = MIT 
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
package_dir = core
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = core

[project.urls]
"Homepage" = "https://github.com/MASTAR-LAST/Science"
"Bug Tracker" = "https://github.com/MASTAR-LAST/Science/issues"